--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 body {
+	margin-top: 56px;
 	font-family: 'Montserrat', sans-serif;
 }
 
@@ -8,7 +9,14 @@ body {
 
 .nav-top {
 	background-color: #2C3E50;
-	height: 3rem;
+}
+
+.nav-top .navbar-toggler .navbar-toggler-icon {
+	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='rgba(255, 255, 255, 0.55)' viewBox='0 0 16 16'%3E%3Cpath d='M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z'/%3E%3Cpath d='M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z'/%3E%3C/svg%3E");
+}
+
+.nav-top .navbar-toggler.collapsed .navbar-toggler-icon {
+	background-image: var(--bs-navbar-toggler-icon-bg);
 }
 
 .img-profile {
@@ -18,10 +26,31 @@ body {
 }
 
 .bl_card {
-	height: 150px;
+	/* height: 150px; */
+	position: relative;
 	background-color: salmon;
 	border-radius: 2rem;
 	overflow: hidden;
+}
+
+.bl_card::after {
+	content: '\F64D';
+	font-family: bootstrap-icons;
+	font-size: 4rem;
+	font-weight: bold;
+	position: absolute;
+	inset: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: white;
+	background-color: #1ABC9C80;
+	cursor: pointer;
+}
+
+.bl_card:hover::after {
+	content: '\F626';
+	color: red;
 }
 
 .about {
@@ -30,4 +59,43 @@ body {
 
 .btn-send {
 	background-color: greenyellow;
+}
+
+footer .info {
+	background-color: #3A546D;
+}
+
+footer .copyright {
+	background-color: #1E1E1E;
+}
+
+.btn-social {
+	flex-shrink: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: .3em;
+	width: 2.5em;
+	height: 2.5em;
+	border-radius: 10em;
+}
+
+.star {
+	display: flex;
+	align-items: center;
+	gap: 1rem;
+	margin: 1rem auto;
+}
+
+.star::before,
+.star::after {
+	content: '';
+	flex-grow: 1;
+	height: 3px;
+	background-color: white;
+}
+
+.star-bool .col {
+	height: 3px;
+	background-color: white;
 }
